@@ -126,6 +126,7 @@ export(theme_tree)
 export(theme_tree2)
 export(viewClade)
 export(write.jplace)
+export(xlim_tree)
 exportClasses(apeBootstrap)
 exportClasses(beast)
 exportClasses(codeml)
@@ -189,6 +190,7 @@ importFrom(ggplot2,element_rect)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,fortify)
 importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_blank)
 importFrom(ggplot2,geom_rect)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
